Correctly implements the tree search for the first assignment, changes internal coord system to match problem definition, various renaming and restructuring