@@ -1,11 +1,13 @@
 package solver;
 
-import pojo.PuzzleState;
-import puzzle.BinaryPuzzle;
+import pojo.State;
 import puzzle.Puzzle;
 import puzzle.PuzzleExpander;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
+import java.util.LinkedList;
+import java.util.PriorityQueue;
 
 /**
  * User: Rory
@@ -18,18 +20,41 @@ import java.util.ArrayList;
  */
 public class BfSolver {
 
-    // TODO: employ PriorityQueues or LinkedLists instead of ArrayLists?
-
-
-    // TODO: write tree search... why'd you do graph search?!
-
     /**
      * Solves the puzzle using Breadth First Tree Search
      * @param problem the Puzzle to solve
      * @return the State that reaches the goal
      */
-    public PuzzleState treeSearch(Puzzle problem){
+    public State treeSearch(Puzzle problem){
+        // Create the initial state
+        final State initialState = new State(problem, null);
 
+        // Define the frontier
+        LinkedList<State> frontier = new LinkedList<State>();
+
+        // Expand the initial state, adding the elements to the frontier
+        frontier.addAll(PuzzleExpander.expand(initialState));
+
+        // Continue until we run out of nodes to test
+        while(!frontier.isEmpty()){
+            // Choose a node to expand on
+            State chosenNode = frontier.getFirst();
+
+            // Remove that node from the frontier
+            frontier.removeFirst();
+
+            // If the chosen node contains a goal state, then we return the corresponding solution
+            if(chosenNode.isGoalState()){
+                return chosenNode;
+            }
+
+            // Expand the chosen node
+            ArrayList<State> expandedNodes = PuzzleExpander.expand(chosenNode);
+
+            // Add resulting nodes to frontier
+            frontier.addAll(expandedNodes);
+        }
+        // If we get this far, we've found no solution
         return null;
     }
 
@@ -38,15 +63,15 @@ public class BfSolver {
      * @param problem the Puzzle to solve
      * @return the State that reaches the goal
      */
-    public PuzzleState graphSearch(Puzzle problem){
+    public State graphSearch(Puzzle problem){
         // Create the initial state
-        final PuzzleState initialState = new PuzzleState(problem, null);
+        final State initialState = new State(problem, null);
 
         // Define the frontier
-        ArrayList<PuzzleState> frontier = new ArrayList<PuzzleState>();
+        LinkedList<State> frontier = new LinkedList<State>();
 
         // Define the explored states
-        ArrayList<PuzzleState> exploredStates = new ArrayList<PuzzleState>();
+        LinkedList<State> exploredStates = new LinkedList<State>();
 
         // Expand the initial state, adding the elements to the frontier
         frontier.addAll(PuzzleExpander.expand(initialState));
@@ -54,10 +79,10 @@ public class BfSolver {
         // Continue until we run out of nodes to test
         while(!frontier.isEmpty()){
             // Choose a node to expand on
-            PuzzleState chosenNode = frontier.get(0);
+            State chosenNode = frontier.getFirst();
 
             // Remove that node from the frontier
-            frontier.remove(0);
+            frontier.removeFirst();
 
             // If the chosen node contains a goal state, then we return the corresponding solution
             if(chosenNode.isGoalState()){
@@ -65,15 +90,15 @@ public class BfSolver {
             }
 
             // Add the chosen node to the explored set
-            exploredStates.add(chosenNode);
+            exploredStates.addLast(chosenNode);
 
             // Expand the chosen node
-            ArrayList<PuzzleState> expandedNodes = PuzzleExpander.expand(chosenNode);
+            ArrayList<State> expandedNodes = PuzzleExpander.expand(chosenNode);
 
             // Add resulting nodes to frontier only if they're not in the frontier or explored set
-            for(PuzzleState state : expandedNodes){
+            for(State state : expandedNodes){
                 if(!frontier.contains(state) && !exploredStates.contains(state)){
-                    frontier.add(state);
+                    frontier.addLast(state);
                 }
             }
         }
